<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/background_dark"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_gravity="bottom"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="3"
    android:orientation="vertical">

    <TextView
        android:id="@+id/calc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:autoSizeTextType="uniform"
        android:hint="@string/calculation"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        tools:text="@string/calculation" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".01"
        android:background="#CB0001" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1.7"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/seven"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_dark"
                    android:fontFamily="@font/allerta_stencil"
                    android:text="@string/seven"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="545dp" />

                <Button
                    android:id="@+id/eight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_dark"
                    android:fontFamily="@font/allerta_stencil"
                    android:text="@string/eight"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    app:layout_constraintStart_toEndOf="@+id/seven"
                    tools:layout_editor_absoluteY="545dp" />

                <Button
                    android:id="@+id/nine"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_dark"
                    android:fontFamily="@font/allerta_stencil"
                    android:text="@string/nine"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    app:layout_constraintStart_toEndOf="@+id/eight"
                    tools:layout_editor_absoluteY="545dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/four"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_dark"
                    android:fontFamily="@font/allerta_stencil"
                    android:text="@string/four"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/seven" />

                <Button
                    android:id="@+id/five"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_dark"
                    android:fontFamily="@font/allerta_stencil"
                    android:text="@string/five"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    app:layout_constraintStart_toEndOf="@+id/four"
                    app:layout_constraintTop_toBottomOf="@+id/eight" />

                <Button
                    android:id="@+id/six"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_dark"
                    android:fontFamily="@font/allerta_stencil"
                    android:text="@string/six"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    app:layout_constraintStart_toEndOf="@+id/five"
                    app:layout_constraintTop_toBottomOf="@+id/nine" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/one"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_dark"
                    android:fontFamily="@font/allerta_stencil"
                    android:text="@string/one"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/four" />

                <Button
                    android:id="@+id/two"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_dark"
                    android:fontFamily="@font/allerta_stencil"
                    android:text="@string/two"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    app:layout_constraintStart_toEndOf="@+id/one"
                    app:layout_constraintTop_toBottomOf="@+id/five" />

                <Button
                    android:id="@+id/three"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_dark"
                    android:fontFamily="@font/allerta_stencil"
                    android:text="@string/three"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    app:layout_constraintStart_toEndOf="@+id/two"
                    app:layout_constraintTop_toBottomOf="@+id/six" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_dark"
                    android:fontFamily="@font/allerta_stencil"
                    android:text="@string/dec"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/one"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/zero"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_dark"
                    android:fontFamily="@font/allerta_stencil"
                    android:text="@string/zero"
                    style="?android:attr/buttonBarButtonStyle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"

                    app:layout_constraintStart_toEndOf="@+id/dot"
                    app:layout_constraintTop_toBottomOf="@+id/two" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/darkGrey"
            android:orientation="vertical"
            android:gravity="left"
            android:baselineAligned="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/div"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/darkGrey"
                    android:fontFamily="@font/allerta_stencil"
                    android:text="@string/div"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    app:layout_constraintStart_toEndOf="@+id/zero"
                    app:layout_constraintTop_toBottomOf="@+id/three" />

                <Button
                    android:id="@+id/delete"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/darkGrey"
                    android:fontFamily="@font/allerta_stencil"
                    android:text="@string/del"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    tools:layout_editor_absoluteY="545dp" />
            </LinearLayout>
            <Button
                android:id="@+id/mul"
                android:layout_width="55dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/darkGrey"
                android:fontFamily="@font/allerta_stencil"
                android:text="@string/mul"
                style="?android:attr/buttonBarButtonStyle"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                <Button
                    android:id="@+id/sub"
                    android:layout_width="55dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/darkGrey"
                    android:fontFamily="@font/allerta_stencil"
                    android:text="@string/sub"
                    style="?android:attr/buttonBarButtonStyle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                    <Button
                        android:id="@+id/add"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="55dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginStart="8dp"
                        android:background="@color/darkGrey"
                        android:fontFamily="@font/allerta_stencil"
                        android:text="@string/add"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteY="545dp" />
                </LinearLayout>
                <Button
                    android:id="@+id/equal"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="110dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/holo_red_dark"
                    android:fadingEdge="none"
                    android:fontFamily="@font/allerta_stencil"
                    android:text="@string/equal"
                    style="?android:attr/buttonBarButtonStyle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>